--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {},
   "dependencies": {
     "body-parser": "^1.18.2",
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mongoose": "^4.13.6"
   }
 }
