--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.6",
+    "morgan": "^1.9.0",
     "multer": "^1.3.0"
   }
 }
