--- a/package.json
+++ b/package.json
@@ -3,14 +3,20 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
+    "bunyan": "^1.8.12",
     "express": "^4.16.2",
     "jsonwebtoken": "^8.1.0",
     "mongoose": "^4.13.6",
     "morgan": "^1.9.0",
     "multer": "^1.3.0"
+  },
+  "engines": {
+    "node": "7.10.0"
   }
 }
